# dtmb-sdr

./: .gitignore  Makefile  README.md  THIRD_PARTY.md  pipeline.mk  pyproject.toml  requirements.txt
core/cpp/: CMakeLists.txt
core/cpp/include/dtmb/: core.hpp  core_c.h  live_view.hpp
core/cpp/src/: c3780.cpp  core.cpp  fec.cpp  frame_sync.cpp  live_view.cpp  pn_channel.cpp  resampler.cpp
core/cpp/tests/: test_core.cpp  test_ldpc_h_gate.cpp  test_live_view_host.cpp
core/cpp/tests/fixtures/: live_view_host_scene.ndjson
core/cpp/tools/: binary_stdio.hpp  c3780_extract.cpp  ci8_resample.cpp  ci8_stats.cpp  deinterleave_qam64.cpp  dtmb_streaming_receiver.cpp  hackrf_acquire.cpp  ldpc_bch_decode.cpp  ldpc_cuda_backend.cpp  ldpc_cuda_backend.cu  ldpc_cuda_backend.hpp  ldpc_h_gate.cpp  ldpc_h_gate.hpp  ldpc_h_gate_main.cpp  ldpc_h_score.cpp  live_monitor.cpp  live_view_draw.cpp  live_view_host.cpp  live_view_host_renderer.cpp  live_view_host_renderer.hpp  live_view_scene.cpp  llr_frame_select.cpp  pipe_buffer.cpp  pre_ldpc_source_score.cpp  qam64_softdemap.cpp
python/dtmb/: __init__.py  acquire.py  analysis.py  bch.py  bits.py  capture.py  capture_metadata.py  carrier_axes.py  channel.py  ci8.py  conditioning.py  constellation.py  continuous_stream.py  decode.py  detect.py  equalization.py  fec.py  frame_plan.py  frame_sync.py  frames.py  frequency.py  ldpc.py  pn.py  pulse_shape.py  qam.py  receiver.py  scrambler.py  simulate.py  sweep.py  symbol_interleaver.py  system_info.py  timing.py  ts.py  tx_c3780.py  ui_server.py
python/dtmb/data/: dtmb_ldpc_generator.json  dtmb_ldpc_parity_check.json  dtmb_ldpc_rate1.alist  dtmb_ldpc_rate2.alist  dtmb_ldpc_rate3.alist
scripts/: __init__.py  analyze_clean_islands.py  check_payload.py  check_ts_lock.py  export_ldpc_alist.py  generate_synthetic_ts.py  generate_synthetic_ts_64qam_r3_m1.py  identify_mux_mode.py  pipeline_end_to_end.py  pipeline_hackrf_to_video.py  verify_ldpc_matrices_vs_standard.py
scripts/pipeline/: __init__.py  _common.py  _scan_inspect.py  acquire.py  capture_hackrf.py  check_hackrf_clock.py  clean_analysis.py  clipping_gate.py  crop_capture.py  decode_ldpc.py  demap.py  gate_c.py  live_stream.py  make_dtmb_pipeline.py  native_live_llr_scan.py  raw_gatec_rollup.py  realtime.py  receive.py  restructure_captures.py  scan_dtmb.py  sweep_hackrf.py  synthesize.py  sysinfo.py  tag_pre_ldpc.py  timing_trajectory.py  transcode.py  video_preflight.py  visualize.py
tests/: test_acquire.py  test_bch.py  test_bits.py  test_ci8.py  test_decode.py  test_equalization.py  test_fec.py  test_frames.py  test_ldpc.py  test_pn_sequences.py  test_qam.py  test_receiver.py  test_scrambler.py  test_symbol_interleaver.py  test_system_info.py  test_ts.py
