[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dtmb-sdr"
version = "0.2.0"
description = "Vendor-neutral CI8 stream to MPEG-TS DTMB receiver"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
dtmb-decode = "dtmb.decode:main"
dtmb-ts-analyze = "dtmb.ts:main"

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-data]
dtmb = ["data/*.alist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
